welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:3: error: ')' expected but integer literal found.
    if (you <= 2 || <= 2) {
                       ^dateFashion:8: error: illegal start of simple expression
  }
  ^